--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "yarn nodeify"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@tradle/react-native-http": "^2.0.1",
     "@vechain/connex-framework": "^1.1.3",
     "@vechain/connex.driver-nodejs": "^1.2.0-beta6",
@@ -30,11 +31,16 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-crypto": "^2.2.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-randombytes": "^3.5.3",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.7",
+    "react-native-screens": "^2.9.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
+    "react-navigation": "^4.4.0",
     "readable-stream": "^1.0.33",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
