add camera qrcode

--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "querystring-es3": "^0.2.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera": "^3.31.0",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
+    "react-native-permissions": "^2.1.5",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
