--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-camera": "^3.31.0",
     "react-native-crypto": "^2.2.0",
     "react-native-crypto-js": "^1.0.0",
+    "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
