--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-crypto-js": "^1.0.0",
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-ionicons": "^4.6.5",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-permissions": "^2.1.5",
