--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-ionicons": "^4.6.5",
+    "react-native-keychain": "^6.1.1",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-permissions": "^2.1.5",
