--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-keychain": "^6.1.1",
     "react-native-level-fs": "^3.0.1",
+    "react-native-modal": "^11.5.6",
     "react-native-os": "^1.2.6",
     "react-native-permissions": "^2.1.5",
     "react-native-qrcode-scanner": "^1.4.1",
