--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-sha256": "^1.3.6",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-navigation": "^4.4.0",
