--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-sha256": "^1.3.6",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tcp": "^3.3.2",
+    "react-native-touch-id": "^4.4.1",
     "react-native-udp": "^2.7.0",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
