--- a/package.json
+++ b/package.json
@@ -52,13 +52,16 @@
     "react-native-tcp": "^3.3.2",
     "react-native-touch-id": "^4.4.1",
     "react-native-udp": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
     "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-navigation-stack": "^2.8.2",
     "react-navigation-tabs": "^2.9.0",
+    "react-redux": "^7.2.0",
     "readable-stream": "^1.0.33",
+    "redux": "^4.0.5",
     "stream-browserify": "^1.0.0",
     "string_decoder": "^0.10.31",
     "thor-devkit": "^1.2.5",
